plugins {
    id 'com.android.application'
    id 'com.google.gms.google-services'  // Google Services plugin
    id 'kotlin-android'
    id 'androidx.navigation.safeargs.kotlin'
}

def getPropertiesFile = { path ->
    Properties props = new Properties()
    props.load(new FileInputStream(file(path)))
    return props
}

android.buildTypes.release.ndk.debugSymbolLevel = 'FULL'
android.defaultConfig.ndk.debugSymbolLevel = 'FULL'

android {
    compileSdk 33
    buildToolsVersion "30.0.3"

    defaultConfig {
        applicationId "com.icesoft.msdb.android"
        minSdkVersion 26
        targetSdkVersion 33
        versionCode 40
        versionName "1.8.0"

        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"

        manifestPlaceholders = [auth0Domain: "@string/com_auth0_domain", auth0Scheme: "msdbclient"]
        signingConfig signingConfigs.debug
        vectorDrawables {
            useSupportLibrary true
        }
    }

    buildTypes {
        release {
//            minifyEnabled true
//            shrinkResources true
//
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'

            getPropertiesFile('./config/prod.properties').each { prop ->
                buildConfigField 'String', prop.key, prop.value
            }
        }
        physical {
            debuggable true
            getPropertiesFile('./config/local-physical.properties').each { prop ->
                buildConfigField 'String', prop.key, prop.value
            }
        }
        physicalProd {
            debuggable true
            getPropertiesFile('./config/prod.properties').each { prop ->
                buildConfigField 'String', prop.key, prop.value
            }
        }
        debug {
            debuggable true
            getPropertiesFile('./config/prod.properties').each { prop ->
                buildConfigField 'String', prop.key, prop.value
            }
        }
        debugLocal {
            debuggable true
            getPropertiesFile('./config/local.properties').each { prop ->
                buildConfigField 'String', prop.key, prop.value
            }
        }
        prod {
            getPropertiesFile('./config/prod.properties').each { prop ->
                buildConfigField 'String', prop.key, prop.value
            }
        }
    }
    compileOptions {
        sourceCompatibility JavaVersion.VERSION_11
        targetCompatibility JavaVersion.VERSION_11
        kotlinOptions {
            jvmTarget = '11'
        }
    }
    namespace 'com.icesoft.msdb.android'
    buildFeatures {
        viewBinding = true
    }
    sourceSets {
        main.java.srcDirs += 'src/main/kotlin'
    }
    composeOptions {
        kotlinCompilerExtensionVersion '1.4.7'
    }
    packagingOptions {
        resources {
            excludes += '/META-INF/{AL2.0,LGPL2.1}'
        }
    }
}

dependencies {

    implementation 'androidx.core:core-ktx:1.10.1'
    implementation "org.jetbrains.kotlin:kotlin-stdlib:1.8.21"

    implementation 'androidx.appcompat:appcompat:1.6.1'
    implementation 'com.google.android.material:material:1.9.0'
    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
    implementation 'androidx.navigation:navigation-fragment-ktx:2.6.0'
    implementation 'androidx.navigation:navigation-ui-ktx:2.6.0'
    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.6.1'
    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.6.1'
    implementation 'com.android.billingclient:billing:6.0.0'

    // retrofit
    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
    implementation 'com.squareup.retrofit2:converter-jackson:2.9.0'
    implementation 'com.squareup.retrofit2:converter-scalars:2.9.0'
    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
    implementation 'androidx.recyclerview:recyclerview:1.3.0'
    implementation 'androidx.preference:preference-ktx:1.2.0'
    implementation 'androidx.browser:browser:1.5.0'
    implementation 'com.google.android.gms:play-services-wallet:19.1.0'
    //noinspection GradleDependency
    implementation 'com.github.ben-manes.caffeine:caffeine:2.9.3'


    implementation 'com.auth0.android:auth0:2.9.3'
    implementation 'com.auth0:java-jwt:3.12.1'

    // Import the BoM for the Firebase platform
    implementation platform('com.google.firebase:firebase-bom:26.4.0')

    // Declare the dependencies for the Firebase Cloud Messaging and Analytics libraries
    // When using the BoM, you don't specify versions in Firebase library dependencies
    implementation 'com.google.firebase:firebase-messaging'
    implementation 'com.google.firebase:firebase-analytics'

    implementation 'com.squareup.retrofit2:converter-jackson:2.9.0'
    implementation 'com.fasterxml.jackson.core:jackson-databind:2.14.1'
    implementation 'com.fasterxml.jackson.core:jackson-core:2.14.1'
    implementation 'com.fasterxml.jackson.core:jackson-annotations:2.14.1'

    // Image handling libraries... Choose just one
    implementation 'com.github.bumptech.glide:glide:4.12.0'
    implementation 'com.squareup.picasso:picasso:2.8'

    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.6.1'
    implementation 'androidx.activity:activity-compose:1.7.2'
    implementation platform('androidx.compose:compose-bom:2023.03.00')
    implementation 'androidx.compose.ui:ui'
    implementation 'androidx.compose.ui:ui-graphics'
    implementation 'androidx.compose.ui:ui-tooling-preview'
    implementation 'androidx.compose.material3:material3'
    androidTestImplementation platform('androidx.compose:compose-bom:2023.03.00')
    androidTestImplementation 'androidx.compose.ui:ui-test-junit4'
    annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
    implementation 'pl.droidsonroids.gif:android-gif-drawable:1.2.25'
    implementation "androidx.navigation:navigation-fragment-ktx:2.6.0"
    implementation "androidx.navigation:navigation-ui-ktx:2.6.0"

    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.9.1'
    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
    debugImplementation 'androidx.compose.ui:ui-tooling'
    debugImplementation 'androidx.compose.ui:ui-test-manifest'

}